@@ -4,7 +4,7 @@ nma.ruecker <- function(TE, seTE,
                         narms, studlab,
                         sm = "",
                         level = 0.95, level.comb = 0.95,
-                        seTE.orig) {
+                        seTE.orig, tau.direct = 0) {
   
   
   w.pooled <- 1 / seTE^2
@@ -257,7 +257,7 @@ nma.ruecker <- function(TE, seTE,
     ##
     selstud <- treat1 == sel.treat1 & treat2 == sel.treat2
     ##
-    m.i <- metagen(TE, seTE.orig, subset = selstud)
+    m.i <- metagen(TE, seTE.orig, subset = selstud, tau.preset = tau.direct)
     ##
     TE.direct[sel.treat1, sel.treat2]   <- m.i$TE.fixed
     seTE.direct[sel.treat1, sel.treat2] <- m.i$seTE.fixed
