@@ -1,3 +1,10 @@
+*** netmeta, version 0.9-3, 2017-mm-dd ***
+
+ ** Major changes **
+ 
+  * Calculate indirect treatment estimates
+
+
 *** netmeta, version 0.9-2, 2016-11-19 ***
 
  ** Major changes **
